--- a/bib/introduction.bib
+++ b/bib/introduction.bib
@@ -76,3 +76,33 @@ year ={2014},
       reportNumber   = "CERN-PH-TH-2014-101",
       SLACcitation   = "%%CITATION = ARXIV:1406.1798;%%",
 }
+
+@article{Arnison:1983rp,
+      author         = "Arnison, G. and others",
+      title          = "{Experimental Observation of Isolated Large Transverse
+                        Energy Electrons with Associated Missing Energy at
+                        s**(1/2) = 540-GeV}",
+      collaboration  = "UA1 Collaboration",
+      journal        = "Phys.Lett.",
+      volume         = "B122",
+      pages          = "103-116",
+      doi            = "10.1016/0370-2693(83)91177-2",
+      year           = "1983",
+      reportNumber   = "CERN-EP-83-13",
+      SLACcitation   = "%%CITATION = PHLTA,B122,103;%%",
+}
+
+@article{Banner:1983jy,
+      author         = "Banner, M. and others",
+      title          = "{Observation of Single Isolated Electrons of High
+                        Transverse Momentum in Events with Missing Transverse
+                        Energy at the CERN anti-p p Collider}",
+      collaboration  = "UA2 Collaboration",
+      journal        = "Phys.Lett.",
+      volume         = "B122",
+      pages          = "476-485",
+      doi            = "10.1016/0370-2693(83)91605-2",
+      year           = "1983",
+      reportNumber   = "CERN-EP-83-25",
+      SLACcitation   = "%%CITATION = PHLTA,B122,476;%%",
+}
