implement some of Aurelio's comments

--- a/tex/conclusion.tex
+++ b/tex/conclusion.tex
@@ -13,10 +13,11 @@ exploited to select samples enriched in \ttbar{} events by identifying
 and reconstructing one isolated lepton with large transverse momentum,
 at least four jets and a large missing transverse momentum.
 The background contamination of the sample has been studied and
-data-driven techniques has been developed to precisely determine its
-composition. In particular the normalization of the dominant \wjets{}
-background has been constrained exploiting the intrinsic charge
-asymmetry in $W$ production at LHC. Other background processes, such
+data-driven techniques have been developed to precisely determine its
+composition. In particular, the normalization of the different
+$W$+heavy--flavor processes has been determined in--situ exploiting
+the intrinsic charge asymmetry in $W$ production at LHC. 
+Other background processes, such
 as single top, Z+jets and diboson production have been estimated with
 Monte Carlo simulations, while QCD multijet events have been modeled
 with well established data-driven techniques.
@@ -25,10 +26,10 @@ event--by--event with a kinematic fit of the measured objects. The
 inclusive and differential distribution of the difference of absolute
 rapidities of the reconstructed top and antitop quarks, \dy{}, has then been
 measured in data and estimated for the backgrounds.
-An unfolding procedure, based on a bayesian inference approach, has
+A novel unfolding procedure, based on a bayesian inference approach, has
 been performed to estimate the inclusive and differential \dy{}
 distribution, and the corresponding asymmetries, at the parton--level,
-taking into account the distortions induced by acceptance and
+accounting for the distortions induced by acceptance and
 resolution effects.
 The procedure has been calibrated with the goal of obtaining the most
 precise and accurate achievable asymmetry measurement, by studying the
@@ -69,7 +70,7 @@ quantities that are at the origin of the Tevatron \afb{}.
 Measuring the asymmetry \ac{} as an effective probe for new physics in
 future LHC datasets will become more challenging. Proton collisions
 will be delivered at higher center-of-mass energy -- $13\TeV{}$ in
-2015 -- thus making the fraction of \qqbar{} annihilation events even
+2015 -- thus making the fraction of $\qqbar{}\to\ttbar{}$ events even
 smaller. Beside enhancing the \qqbar{} fraction by requiring a large
 $z$--component of the \ttbar{} velocity, a promising approach is to
 study the asymmetry in \ttbar{} events produced in association with
