--- a/bib/conclusion.bib
+++ b/bib/conclusion.bib
@@ -1,5 +1,5 @@
 @article{Aguilar-Saavedra:2014vta,
-      author         = "Aguilar-Saavedra, J.A. and Álvarez, E. and Juste, A. and
+      author         = "Aguilar-Saavedra, J.A. and \'Alvarez, E. and Juste, A. and
                         Rubbo, F.",
       title          = "{Shedding light on the $t \bar t$ asymmetry: the photon
                         handle}",
