use scientific style for bibliography

--- a/main.tex
+++ b/main.tex
@@ -1,12 +1,12 @@
 % adding pointlessnumbers to avoid "Figure 1.1.: ..."
-\documentclass[11pt, a4paper]{book}
+\documentclass[11pt, a4paper, openany]{book}
 %\documentclass[11pt, a4paper, headsepline, footsepline, numbers=noenddot, draft]{book}
 
 \pdfoutput=1
 
 \input{tex/preamble}
 
-\includeonly{tex/conclusion}
+%\includeonly{tex/conclusion}
 
 \addbibresource{bib/introduction.bib}
 \addbibresource{bib/theory.bib}
