--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -5,7 +5,11 @@
 \usepackage{rotating}
 \usepackage[english]{babel}
 \usepackage[autostyle]{csquotes}
-\usepackage[backend=biber]{biblatex}
+\usepackage[
+        backend=biber,  
+        style=chem-angew,
+        sorting=none,
+        ]{biblatex}
 \selectlanguage{english}
 \usepackage{setspace}
 
