--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -3,5 +3,10 @@
 
 \input{tex/appendix_trf.tex}
 
+\chapter{Unfolding checks}
+\label{app:unfolding}
+
+\input{tex/appendix_unfolding.tex}
+
 \chapter{Differential results}
 \label{app:results}
