--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -3,6 +3,11 @@
 
 \input{tex/appendix_trf.tex}
 
+\chapter{Control plots}
+\label{app:selection}
+
+\input{tex/appendix_selection.tex}
+
 \chapter{Unfolding checks}
 \label{app:unfolding}
 
