--- a/tex/title.tex
+++ b/tex/title.tex
@@ -1,1 +1,69 @@
-title
+\newgeometry{top=1cm,bottom=1.5cm,right=1cm,left=1cm}
+\linespread{1.5}
+\pagestyle{empty}
+\begin{center}
+\par
+\vspace{6pt}
+\begin{tabular}{p{5cm}p{5cm}}
+\includegraphics[width=.23\textwidth]{figures/title/uab_logo}&
+\includegraphics[width=.3\textwidth]{figures/title/ifae_logo}\\
+\end{tabular}
+\par
+\vspace{6pt}
+\hrule 
+\par
+\vspace{6pt}
+\par
+\begin{Large}
+Doctorado en Física\\
+\vspace{-5pt}
+Departamento de Física,\\
+\vspace{-10pt}
+Universitat Autònoma de Barcelona\\
+\vspace{-10pt}
+y\\
+\vspace{-10pt}
+Institut de F\'isica d'Altes Energies\\
+\end{Large}
+\vspace{80pt}
+{\huge \bfseries Measurements of the charge asymmetry } \\
+\vspace{6pt}
+{\huge \bfseries in top quark pair production at the LHC } \\
+\vspace{6pt}
+{\huge \bfseries  with the ATLAS detector }
+\vspace{40pt} \\
+
+\begin{large}
+\textbf{PhD dissertation}
+\par
+\vspace{2pt}
+\par
+September 2014 \\ 
+\par
+\vspace{48pt}
+\par
+\end{large} 
+
+\centering
+\begin{tabular}{p{6cm}p{9cm}}
+\large Doctorando &  \\
+\Large \bfseries Francesco Rubbo & \\
+ & \\
+ & \\
+ & \large Director \\
+ &\Large \bfseries Prof. Aurelio Juste Rozas\\
+ &\large Instituci\'o Catalana de Recerca i Estudis Avan\c{c}ats\\
+ &\large Institut de F\'isica d’Altes Energies\\
+ & \\
+ & \\
+ & \large Tutor \\
+ &\Large \bfseries Prof. Jos\'e Mar\'ia Crespo\\
+ &\large Universitat Aut\`onoma de Barcelona\\
+ &\large Institut de F\'isica d’Altes Energies\\
+ & \\
+ & \\
+\end{tabular}
+%\vspace{80pt} \\
+\hrule \vspace{6pt}
+\large 
+\end{center}
