--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 % adding pointlessnumbers to avoid "Figure 1.1.: ..."
 \documentclass[11pt, a4paper, openany]{book}
-\usepackage[paper=a4paper,margin=1in]{geometry}
+\usepackage[paper=a4paper]{geometry}
 
 \pdfoutput=1
 
