remove broken references

--- a/tex/appendix_unfolding.tex
+++ b/tex/appendix_unfolding.tex
@@ -7,8 +7,7 @@ In this section we briefly summarize the details of the regularization
 used for the inclusive unfolding and for the differential one as a
 function of \pttt{}.
 
-We use the definition of curvature given in eq.~26 in
-Ref.~\cite{Fbu2012arXiv1201.4612C}
+We use the definition of curvature
 %
 \begin{equation}
         C(\Truth{}) =
@@ -86,7 +85,7 @@ the one-dimensional unfolding used in the inclusive measurement
 used in the differential measurements
 (figures~\ref{fig:app:fbuUnfACmtt}--\ref{fig:app:fbuLinACpTtt}.  The
 linearity is tested by measuring the \ac{} value after unfolding for
-several \protos{}~\cite{bib:protos} axigluon samples that have a
+several \protos{} axigluon samples that have a
 non-zero asymmetry. Figure~\ref{fig:app:fbuErrLhoodCut} illustrates
 the reduction in the unfolding statistical error that can be obtained
 by requiring that the kinematic fit likelihood is greater than $-50$.
