remove broken reference

--- a/tex/results.tex
+++ b/tex/results.tex
@@ -227,8 +227,8 @@ Missing transverse momentum and pile--up modeling& $<0.0005$\\
 Multi--jets background normalization & $<0.0005$\\
 Other backgrounds normalization        & $<0.0005$\\
 $b$--tagging/mis--tag efficiency       & $<0.0005$\\
-Signal modeling                                    & $??$\\
-Parton shower/hadronization                & $??$\\
+Signal modeling                                    & $0.004$\\
+Parton shower/hadronization                & $0.003$\\
 Monte Carlo statistics                            & $0.0008$\\
 PDF                                                        &$0.0006$\\
 Unfolding response                               &$<0.0005$\\
@@ -254,9 +254,9 @@ with the theoretical SM predictions and found to be compatible.
   \label{fig:8tevacvsmtt}
 \end{figure}
 
-The asymmetry values corresponding to the spectra in
-Fig.~\ref{fig:8tevacvsmtt} are detailed in
-App.~\ref{app:differentialresults}, together with the breakdown of the
-systematic uncertainties (App.~\ref{app:systematics}) and the
-correlation matrix (App.~\ref{app:correlations}).
+%The asymmetry values corresponding to the spectra in
+%Fig.~\ref{fig:8tevacvsmtt} are detailed in
+%App.~\ref{app:differentialresults}, together with the breakdown of the
+%systematic uncertainties (App.~\ref{app:systematics}) and the
+%correlation matrix (App.~\ref{app:correlations}).
 
