fix section name

--- a/tex/selection.tex
+++ b/tex/selection.tex
@@ -520,7 +520,7 @@ agreement with the predictions.
   \label{fig:taggeddatamc}
 \end{figure}
 
-\section{Systematics}
+\section{Systematic uncertainties}
 
 The precision of the measurements depends on two aspects: the
 amount of signal events in the sample, determining the statistical
