--- a/tex/objects.tex
+++ b/tex/objects.tex
@@ -204,7 +204,7 @@ region $1.37<|\eta_{\mathrm{cluster}}|<1.52$ are not
 considered. Electrons are also required to be isolated both at the
 calorimeter level, considering the energy within $\deltaR{}{}<0.2$,
 and at the track level, considering the scalar sum of \pt{} of tracks
-within $\deltaR{}{}<0.3$
+within $\deltaR{}{}<0.3$.
 
 \section{Muons}
 \label{sec:muons}
