fix accent in Física

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -15,9 +15,9 @@
 \vspace{6pt}
 \par
 \begin{Large}
-Doctorado en Física\\
+Doctorado en F\'isica\\
 \vspace{-5pt}
-Departamento de Física,\\
+Departamento de F\'isica,\\
 \vspace{-10pt}
 Universitat Autònoma de Barcelona\\
 \vspace{-10pt}
